--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         <div class="grid gap-32">
           <article class="grid grid-flow-col gap-16">
-            <div>
+            <div style="display: block">
               <span class="content-tag">Inteligência Artificial</span>
               <h3 class="text-xl">
                 Empresa surpreende o mundo ao anunciar um algoritmo capaz de
@@ -246,88 +246,88 @@
         </div>
       </section>
 
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/Ads.png" alt="" />
         </div>
-      </div>
 
-      <section id="more">
-        <header class="grid grid-flow-col">
-          <h3>Viu isso aqui?</h3>
-          <a href="#" class="grid grid-flow-col">
-            <strong>Ver tudo</strong>
-            <span></span>
-          </a>
-        </header>
+        <section id="more">
+          <header class="grid grid-flow-col">
+            <h3>Viu isso aqui?</h3>
+            <a href="#" class="grid grid-flow-col">
+              <strong>Ver tudo</strong>
+              <span></span>
+            </a>
+          </header>
 
-        <div class="grid gap-32">
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="assets/images/Image 14.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Inteligência Artificial</span>
-              <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque,
-                incentivando práticas ecológicas e prom...
-              </h3>
-            </div>
-          </article>
+          <div class="grid gap-32">
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img src="assets/images/Image 14.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Software</span>
+                <p class="subtexto">
+                  Aplicativo de monitoramento ambiental ganha destaque,
+                  incentivando práticas...
+                </p>
+              </div>
+            </article>
 
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="assets/images/Image 15.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Realidade Virtual</span>
-              <h3 class="text-xl">
-                Óculos de realidade virtual com feedback tátil proporcionam uma
-                experiência sensorial comp...
-              </h3>
-            </div>
-          </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img src="assets/images/Image 15.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Realidade Virtual</span>
+                <p class="subtexto">
+                  Óculos de realidade virtual com feedback tátil proporcionam
+                  uma experiê...
+                </p>
+              </div>
+            </article>
 
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="assets/images/Image 16.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Criptomoedas</span>
-              <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias
-                sustentáveis, buscando minimizar o i...
-              </h3>
-            </div>
-          </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img src="assets/images/Image 16.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Criptomoedas</span>
+                <p class="subtexto">
+                  Surge uma nova moeda digital baseada em tecnologias
+                  sustentáveis, buscando...
+                </p>
+              </div>
+            </article>
 
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="assets/images/Image 17.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Drones</span>
-              <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas
-                rápidas, transformando o ce...
-              </h3>
-            </div>
-          </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img src="assets/images/Image 17.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Drones</span>
+                <p class="subtexto">
+                  Empresas de e-commerce implementam frota de drones para
+                  entregas rápidas...
+                </p>
+              </div>
+            </article>
 
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="assets/images/Image 18.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Impressão 3D</span>
-              <h3 class="text-xl">
-                Tecnologia inovadora permite a impressão 3D de órgãos humanos,
-                revolucionando a med...
-              </h3>
-            </div>
-          </article>
-        </div>
-      </section>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img src="assets/images/Image 18.png" alt="" />
+              </div>
+              <div>
+                <span class="content-tag">Impressão 3D</span>
+                <p class="subtexto">
+                  Tecnologia inovadora permite a impressão 3D de órgãos humanos,
+                  revolucionando...
+                </p>
+              </div>
+            </article>
+          </div>
+        </section>
+      </aside>
     </main>
   </body>
 </html>
